--- a/part-04/mlb-lecture-04_new.qmd
+++ b/part-04/mlb-lecture-04_new.qmd
@@ -334,7 +334,19 @@ Neben den Servicegraden können wir auch fragen: Was bedeutet ein bestimmter Sic
     $$
     \text{Erwartete Lieferunfähigkeitsdauer} \approx \max(0, L - \text{Erwartete Reichweite})
     $$
-    wobei $L$ die Wiederbeschaffungszeit ist. [^lieferunfähigkeit]
+    wobei $L$ die Wiederbeschaffungszeit ist. Nehmen wir an, wir würden einen niedrigeren Servicegrad von 85% anstreben ($\alpha=0.85$, $z=1.036$). Der neue Bestellpunkt wäre $s = 200 + 1.036 \cdot 30 \approx 231$. Die erwartete Reichweite wäre dann $231 / 50 \approx 4.62$ Wochen. Mit einer Wiederbeschaffungszeit von $L=4$ Wochen ergibt sich:
+    
+    $$
+    \text{Erwartete Lieferunfähigkeitsdauer} \approx \max(0, 4 - 4.62) = 0
+    $$
+    
+    Selbst bei einem 85%-Servicegrad erwarten wir nach dieser Näherung keine Lieferunfähigkeit. Würde unsere Wiederbeschaffungszeit jedoch auf $L=5$ Wochen steigen, wäre die Situation anders:
+    
+    $$
+    \text{Erwartete Lieferunfähigkeitsdauer} \approx \max(0, 5 - 4.62) = 0.38 \text{ Wochen}
+    $$
+    
+    Wir müssten also mit einer durchschnittlichen Lieferunfähigkeit von fast einer halben Woche rechnen. [^lieferunfähigkeit]
 
     [^lieferunfähigkeit]: Diese Formel ist ebenfalls eine **Näherung**, da sie auf der angenäherten Reichweite basiert.
 
