Update meeting date and remove redundant line break
Remove extra line break in disclaimer text

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ Dieser Kurs behandelt das Modul Materiallogistik auf Basis der ursprünglichen V
 
 # Neuigkeiten
 
-- Unsere nächste Besprechung findet am **Dienstag, 8. Juli 2025, 13:00 Uhr** statt.
+- Unsere nächste und letzte Besprechung findet am **Dienstag, 5. August 2025, 13:00 Uhr** statt.
 - [Klicken Sie hier, um zur Besprechung zu gelangen](https://meet.google.com/efc-hgep-ibr).
 - Als Beispiel für das Klausurformat finden Sie [hier](general/pw2-2025.pdf) die PW2 Klausur 2025 von mir.
 
@@ -29,7 +29,7 @@ Mein Ziel ist es, Sie auf die Klausuren vorzubereiten und Ihnen gleichzeitig die
 - Verschiedene Servicelevel zu verstehen
 - Grundlegende Bestellpolitiken anzuwenden
 
-Es sind keine fortgeschrittenen Kenntnisse oder Erfahrungen erforderlich, um den Inhalten zu folgen, obwohl Grundkenntnisse in statistischen Methoden, Operations Research und Mathematik hilfreich sind. Ferner entsprechen **nicht alle Inhalte der Vorlesung dem jeweils letzten Stand der Forschung, da die Folien von Prof. Dr. Manitz stammen und bereits etwas älter sind.** 
+Es sind keine fortgeschrittenen Kenntnisse oder Erfahrungen erforderlich, um den Inhalten zu folgen, obwohl Grundkenntnisse in statistischen Methoden, Operations Research und Mathematik hilfreich sind. Ferner entsprechen **nicht alle Inhalte der Vorlesung dem jeweils letzten Stand der Forschung, da die Folien von Prof. Dr. Manitz stammen und bereits etwas älter sind.**
 
 # Kursmodule
 Der Kerninhalt des Kurses ist in sechs Module gegliedert:
@@ -55,6 +55,6 @@ Wichtig: Der Formelzettel muss handschriftlich erstellt werden. Digital erstellt
 
 # Fragen und Unterstützung
 
-Für Ihre Fragen stehe ich jederzeit gerne zur Verfügung. Kontaktieren Sie mich einfach per E-Mail unter [tobias.vlcek@uni-due.de](mailto:tobias.vlcek@uni-due.de?subject=Materiallogistik%3A%20%3CIhr%20Betreff%3E). 
+Für Ihre Fragen stehe ich jederzeit gerne zur Verfügung. Kontaktieren Sie mich einfach per E-Mail unter [tobias.vlcek@uni-due.de](mailto:tobias.vlcek@uni-due.de?subject=Materiallogistik%3A%20%3CIhr%20Betreff%3E).
 
 Zusätzlich steht Ihnen auf dieser Seite ein Chatbot zur Verfügung, der auf den Inhalten der Vorlesung basiert und Ihnen bei inhaltlichen Fragen unterstützend zur Seite stehen kann. Er ist nicht perfekt und eher eine Beta-Version, aber ich hoffe, dass er Ihnen dennoch hilft.
